Fix body overflow and prevent dragging on cards being edited

--- a/resources/assets/less/app.less
+++ b/resources/assets/less/app.less
@@ -5,9 +5,10 @@
 @import "pages/login.less";
 @import "animations.less";
 
-html, body {
-  height: 100%;
-  overflow: hidden;
+html {
+  background: none;
+  overflow-y: scroll;
+  overflow-x: hidden;
 }
 
 body {
